--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class = "btn-container">
                     <button 
                     class = "btn btn-color-2"
-                    onclick="window.open('./assets/assets/SanjanaVatsavai.pdf')"
+                    onclick="window.open('./assets/assets/Sanjana Java _Full stack_developer 4+ YOE Resume.pdf')"
                     > 
                     Download Resume
                 </button>
@@ -312,7 +312,7 @@
                 <div class="contact-info-container">
                     <img src="./assets/assets/email.png" alt="Email icon"
                     class="icon contact-icon email-icon"/>
-                    <p><a href="mailto:sanjanavatsavai@gmail.com">sanjanavatsavai@gmail.com</a></p>
+                    <p><a href="mailto:sanjanavatsavai52@gmail.com">sanjanavatsavai52@gmail.com</a></p>
                 </div>
                 <div class="contact-info-container">
                     <img src="./assets/assets/linkedin.png" alt="LinkedIn icon"
