--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class = "btn-container">
                     <button 
                     class = "btn btn-color-2"
-                    onclick="window.open('./assets/assets/Sanjana_Java__Full_stack_developer_Resume.pdf')"
+                    onclick="window.open('assets/assets/Sanjana_Java__Full_stack_developer_Resume.pdf')"
                     > 
                     Download Resume
                 </button>
